@@ -7,10 +7,12 @@ package ejercicio11;
 
 import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
-import java.util.logging.Level;
-import java.util.logging.Logger;
+import java.io.OutputStreamWriter;
+import java.io.PrintWriter;
+import java.util.Scanner;
 
 /**
  *
@@ -24,46 +26,78 @@ public class Principal {
     public static void main(String[] args) {
         // TODO code application logic here
         
-        Mayusculas m = new Mayusculas();
-        
-        
+        MayusculasPadre mp = new MayusculasPadre();
         
     }
     
 }
 
+
 class Mayusculas{
     public Mayusculas(){
-
-        String comando, lectura;
-        Process p, pPadre;
-        OutputStream os;
-        InputStreamReader is = new InputStreamReader(System.in);
-        BufferedReader teclado = new BufferedReader (is);
-        
-        if(System.getProperty("os.name").equalsIgnoreCase("linux")){
-
-            comando = "echo escriba algo:";
-            
-        }else{
-            comando = "cmd /c echo escriba algo:";
+        String entrada;
+        InputStreamReader isr = new InputStreamReader(System.in);
+        BufferedReader br = new BufferedReader (isr);
+       
+        try
+        {   
+            entrada=br.readLine();
+            System.out.println(entrada.toUpperCase());       
         }
+        catch(IOException e)
+        {
+            e.printStackTrace();
+        }
+    }
+}
+
+class MayusculasPadre{
+    public MayusculasPadre(){
+        try
+        {       
+            Scanner entrada = new Scanner(System.in);                           
+            String lectura;
+            System.out.println("Introducir linea:");           
+                       
+            do
+            {
+                lectura = entrada.nextLine();   
+               
+                if( lectura != null){
+                    llamada(lectura);
+                }
+            }
+            while(!lectura.isBlank());
+           
+            System.out.println("Proceso finalizado");       
+        }
+        catch(Exception ex)
+        {       
+            ex.printStackTrace();
+        } 
+    }
+    
+    private static void llamada(String lectura){
         
         try {
-            p = new ProcessBuilder(comando).start();
+            Process p = Runtime.getRuntime().exec("java -jar mayusculas.jar");
+            OutputStream os = p.getOutputStream ();
+            InputStream is = p.getInputStream ();
             
-            lectura = teclado.readLine();
+            BufferedReader reader = new BufferedReader (new InputStreamReader(is));
+            PrintWriter pw = new PrintWriter(new OutputStreamWriter(os));
             
-            //pPadre = new ProcessBuilder(teclado).start();
+            pw.println(lectura);
+            pw.flush();
             
-            os = p.getOutputStream();
+            // Se lee la primera linea
+            String linea = reader.readLine();
             
-            
-            
-            System.out.println(os);
+            if(!linea.isBlank()){
+                System.out.println(linea);
+            }
         } catch (IOException ex) {
-            Logger.getLogger(Mayusculas.class.getName()).log(Level.SEVERE, null, ex);
+            System.out.println("Error en la llamada.");
         }
-        
-    }
+    } 
 }
